@@ -17,6 +17,7 @@ package mnemogogo.mobile.hexcsv;
 interface CardDataSet {
     void setCardData(int serial, String question, String answer,
 		     boolean overlay);
+
     boolean cardDataNeeded(int serial);
 }
 
