@@ -14,8 +14,11 @@
 
 package mnemogogo.mobile.hexcsv;
 
+import java.io.IOException;
+
 interface CardList {
     Card getCard(int serial);
     String getCategory(int n);
+    void loadCardData() throws IOException;
 }
 
