@@ -1,8 +1,10 @@
-200909__ mnemogogo-0.9.5
+20091014 mnemogogo-0.9.5
 * MAJOR CHANGE: new export/import format
 * Handle a missing Python Image Library more gracefully
-* Tidy up image handling functions
+* Tidy up image handling functions.
 * Fix a timezone bug in the calculation of days left.
+* Fix a bug in resizing images below a maximum size.
+* Lazier loading of card text.
 
 20090905 mnemogogo-0.9.4
 * Randomize the choice of new cards.
